[tool.poetry]
name = "views_pipeline"
version = "0.1.0"
description = ""
authors = ["Borbála Farkas <borbala.farkas@pcr.uu.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
viewser = "^6.6.4"
pytest = "^8.3.3"
ingester3 = "^2.1.0"
views_forecasts = "^0.5.5"
properscoring = "^0.1"
wandb = "^0.18.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
